--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -1,5 +1,22 @@
+img {
+  width: 240px;
+  height: auto;
+  }
 
+  .box-product{
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+padding: 15px;
+text-align: center;
+margin-bottom: 30px;
+background: rgb(197, 194, 194);
+  }
 
+  .flex{
+   
+   display: flex;
+  }
 /*
 Copyright Google LLC. All Rights Reserved.
 Use of this source code is governed by an MIT-style license that
